overflow added. Possible fix for landscape mode users

--- a/css/root.less
+++ b/css/root.less
@@ -219,16 +219,15 @@ header {
     }
 
     .navMenu.active {
+      overflow: auto;
       top: 54/16em;
       right: 0;
       width: auto;
       height: 100dvh;
-      // height: -webkit-fill-available;
       display: flex;
       flex-direction: column;
       gap: 16/16em;
       padding-top: 48/16em;
-      // margin-top: 48/16em;
       li.contactLinks {
         font-size: 16/16em;
         .emailLink {
